Added logo. Installed ui components. Made first version of Header and Footer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,72 +4,58 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-	--radius: 0.75rem;
 	--background: oklch(1 0 0);
-	--foreground: oklch(0.141 0.005 285.823);
+	--foreground: oklch(0.161 0.044 265.17);
 	--card: oklch(1 0 0);
-	--card-foreground: oklch(0.141 0.005 285.823);
+	--card-foreground: oklch(0.161 0.044 265.17);
 	--popover: oklch(1 0 0);
-	--popover-foreground: oklch(0.141 0.005 285.823);
-	--primary: oklch(0.623 0.214 259.815);
-	--primary-foreground: oklch(0.97 0.014 254.604);
-	--secondary: oklch(0.967 0.001 286.375);
-	--secondary-foreground: oklch(0.21 0.006 285.885);
-	--muted: oklch(0.967 0.001 286.375);
-	--muted-foreground: oklch(0.552 0.016 285.938);
-	--accent: oklch(0.967 0.001 286.375);
-	--accent-foreground: oklch(0.21 0.006 285.885);
-	--destructive: oklch(0.577 0.245 27.325);
-	--border: oklch(0.92 0.004 286.32);
-	--input: oklch(0.92 0.004 286.32);
-	--ring: oklch(0.623 0.214 259.815);
-	--chart-1: oklch(0.646 0.222 41.116);
-	--chart-2: oklch(0.6 0.118 184.704);
-	--chart-3: oklch(0.398 0.07 227.392);
-	--chart-4: oklch(0.828 0.189 84.429);
-	--chart-5: oklch(0.769 0.188 70.08);
-	--sidebar: oklch(0.985 0 0);
-	--sidebar-foreground: oklch(0.141 0.005 285.823);
-	--sidebar-primary: oklch(0.623 0.214 259.815);
-	--sidebar-primary-foreground: oklch(0.97 0.014 254.604);
-	--sidebar-accent: oklch(0.967 0.001 286.375);
-	--sidebar-accent-foreground: oklch(0.21 0.006 285.885);
-	--sidebar-border: oklch(0.92 0.004 286.32);
-	--sidebar-ring: oklch(0.623 0.214 259.815);
+	--popover-foreground: oklch(0.161 0.044 265.17);
+	--primary: oklch(0.631 0.233 264.7);
+	--primary-foreground: oklch(0.981 0.007 245);
+	--secondary: oklch(0.958 0.007 245);
+	--secondary-foreground: oklch(0.248 0.063 265);
+	--muted: oklch(0.958 0.007 245);
+	--muted-foreground: oklch(0.581 0.037 251.4);
+	--accent: oklch(0.958 0.007 245);
+	--accent-foreground: oklch(0.248 0.063 265);
+	--destructive: oklch(0.665 0.247 27);
+	--destructive-foreground: oklch(0.981 0.007 245);
+	--border: oklch(0.934 0.012 260);
+	--input: oklch(0.934 0.012 260);
+	--ring: oklch(0.631 0.233 264.7);
+	--radius: 0.75rem;
+	--chart-1: oklch(0.717 0.252 44.3);
+	--chart-2: oklch(0.518 0.184 185.4);
+	--chart-3: oklch(0.339 0.103 222.6);
+	--chart-4: oklch(0.768 0.24 92);
+	--chart-5: oklch(0.779 0.277 69);
 }
 
 .dark {
-	--background: oklch(0.141 0.005 285.823);
-	--foreground: oklch(0.985 0 0);
-	--card: oklch(0.21 0.006 285.885);
-	--card-foreground: oklch(0.985 0 0);
-	--popover: oklch(0.21 0.006 285.885);
-	--popover-foreground: oklch(0.985 0 0);
-	--primary: oklch(0.546 0.245 262.881);
-	--primary-foreground: oklch(0.379 0.146 265.522);
-	--secondary: oklch(0.274 0.006 286.033);
-	--secondary-foreground: oklch(0.985 0 0);
-	--muted: oklch(0.274 0.006 286.033);
-	--muted-foreground: oklch(0.705 0.015 286.067);
-	--accent: oklch(0.274 0.006 286.033);
-	--accent-foreground: oklch(0.985 0 0);
-	--destructive: oklch(0.704 0.191 22.216);
-	--border: oklch(1 0 0 / 10%);
-	--input: oklch(1 0 0 / 15%);
-	--ring: oklch(0.488 0.243 264.376);
-	--chart-1: oklch(0.488 0.243 264.376);
-	--chart-2: oklch(0.696 0.17 162.48);
-	--chart-3: oklch(0.769 0.188 70.08);
-	--chart-4: oklch(0.627 0.265 303.9);
-	--chart-5: oklch(0.645 0.246 16.439);
-	--sidebar: oklch(0.21 0.006 285.885);
-	--sidebar-foreground: oklch(0.985 0 0);
-	--sidebar-primary: oklch(0.546 0.245 262.881);
-	--sidebar-primary-foreground: oklch(0.379 0.146 265.522);
-	--sidebar-accent: oklch(0.274 0.006 286.033);
-	--sidebar-accent-foreground: oklch(0.985 0 0);
-	--sidebar-border: oklch(1 0 0 / 10%);
-	--sidebar-ring: oklch(0.488 0.243 264.376);
+	--background: oklch(0.161 0.044 265.17);
+	--foreground: oklch(0.981 0.007 245);
+	--card: oklch(0.161 0.044 265.17);
+	--card-foreground: oklch(0.981 0.007 245);
+	--popover: oklch(0.161 0.044 265.17);
+	--popover-foreground: oklch(0.981 0.007 245);
+	--primary: oklch(0.688 0.256 260);
+	--primary-foreground: oklch(0.248 0.063 265);
+	--secondary: oklch(0.264 0.04 258);
+	--secondary-foreground: oklch(0.981 0.007 245);
+	--muted: oklch(0.264 0.04 258);
+	--muted-foreground: oklch(0.726 0.032 250);
+	--accent: oklch(0.264 0.04 258);
+	--accent-foreground: oklch(0.981 0.007 245);
+	--destructive: oklch(0.403 0.166 27);
+	--destructive-foreground: oklch(0.981 0.007 245);
+	--border: oklch(0.264 0.04 258);
+	--input: oklch(0.264 0.04 258);
+	--ring: oklch(0.611 0.226 262);
+	--chart-1: oklch(0.634 0.237 255);
+	--chart-2: oklch(0.543 0.192 160);
+	--chart-3: oklch(0.696 0.2 45);
+	--chart-4: oklch(0.781 0.23 295);
+	--chart-5: oklch(0.695 0.275 18);
 }
 
 @theme inline {
@@ -118,4 +104,13 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+}
+
+@font-face {
+	font-family: 'Poppins';
+	src: url('/fonts/Poppins/Poppins-Regular.woff2') format('woff2'),
+		url('/fonts/Poppins/Poppins-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
 }
